# starter_template

backend_service/: pyproject.toml
backend_service/src/modal_app/: agent.py  common.py  discord.py  functions.py  main.py  models.py  utils.py
frontend_service/: bun.lockb  package.json
frontend_service/src/: App.tsx
frontend_service/src/components/: AgentChat.tsx  EADashboard.tsx  GoogleCalendarQuickstart.tsx
