[project]
name = "modal-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nheingit", email = "60185486+nheingit@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "modal>=0.72.7",
    "openai>=1.59.9",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
]

[project.scripts]
modal-app = "modal_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
